k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kd-family
  labels:
    name: kd-family
    app: kd-family-system
